--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@upstash/redis": "^1.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.14",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
