--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
     "lucide-react": "^0.403.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
